# battery-percentage-bt

./: .gitignore  .rules  Cargo.toml  README.md  create-release.sh  gnome-integration.sh  install-status-bar.sh
.zed/: settings.json
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: bluetooth.rs  device_monitor.rs  lib.rs  usb.rs
crates/gui/: Cargo.toml
crates/gui/src/: details.rs  lib.rs  settings.rs  tray.rs
crates/main/: Cargo.toml
crates/main/src/: app.rs  cli.rs  main.rs
crates/notifications/: Cargo.toml
crates/notifications/src/: lib.rs
scripts/: create-release.sh  gnome-integration.sh  install-status-bar.sh  status-bar-reader.sh
src/: bluetooth.rs  keyboard.rs  lib.rs  main.rs
