[workspace]
members = ["crates/core", "crates/gui", "crates/notifications", "crates/config", "crates/main"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
gtk4 = "0.7"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
zbus = "3.0"
uuid = { version = "1.0", features = ["v4"] }
