[package]
name = "battery-monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "battery-monitor"
path = "src/main.rs"

[dependencies]
battery-monitor-core = { path = "../core" }
battery-monitor-notifications = { path = "../notifications" }
battery-monitor-config = { path = "../config" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio-stream = "0.1"
toml = { workspace = true }

# GUI dependencies
battery-monitor-gui = { path = "../gui", optional = true }
gtk4 = { workspace = true, optional = true }

[features]
default = ["gui"]
gui = ["battery-monitor-gui", "gtk4"]
